--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,12 @@
         android:layout_height="match_parent"
         android:layout_above="@id/navigation"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/app_bar_layout" />
+        android:layout_below="@+id/app_bar_layout" >
+        <TextView
+            android:id="@+id/example"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
 
     <android.support.design.widget.BottomNavigationView
