--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
                 android:text="Filter" />
 
             <android.support.v7.widget.SearchView
+                android:id="@+id/searchView"
                 android:layout_width="250dp"
                 android:layout_height="match_parent" />
 
@@ -46,7 +47,8 @@
         android:layout_height="match_parent"
         android:layout_above="@id/navigation"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/app_bar_layout" >
+        android:layout_below="@+id/app_bar_layout">
+
         <TextView
             android:id="@+id/example"
             android:layout_width="match_parent"
