--- a/app/src/main/res/layout/photo_list_item.xml
+++ b/app/src/main/res/layout/photo_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_margin="8dp">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/photo_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
