--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -28,6 +28,7 @@
 
 
                 <TextView
+                    android:textStyle="bold"
                     android:id="@+id/item_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -77,6 +78,12 @@
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/item_name"
                     android:text="item pirce" />
+                <TextView
+                    android:layout_below="@+id/item_address"
+                    android:text="phone number"
+                    android:id="@+id/item_phone_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
