--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,30 +11,35 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             android:theme="@style/ThemeToolbar"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
 
             <TextView
+
                 android:id="@+id/filter_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Filter" />
+                android:text="Filter"
+                android:textStyle="bold"/>
 
             <android.support.v7.widget.SearchView
+                android:layout_marginLeft="18dp"
                 android:id="@+id/searchView"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="match_parent" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="map" />
         </android.support.v7.widget.Toolbar>
