--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,13 @@
     tools:context="dev.android.kevin.project.UI.DetailFragment">
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
     <LinearLayout
+        android:id="@+id/detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="8dp"
@@ -48,9 +54,8 @@
                     android:id="@+id/item_types"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
                     android:layout_below="@+id/item_rating"
-                    android:layout_marginBottom="4dp"
-                    android:layout_toEndOf="@+id/item_image"
                     android:text="types" />
 
                 <TextView
@@ -100,6 +105,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:layout_marginBottom="8dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp">
@@ -112,5 +118,13 @@
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
+
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/progressbar"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
 </android.support.v4.widget.NestedScrollView>
