--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <!----> #3F51B5
+
+    <color name="colorPrimary">#DC143C</color>
+    <color name="colorPrimaryDark">#B22222</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="darkGrey">#A9A9A9</color>
